fix footer overlapping next button and set correct name color in results page

--- a/src/components/styles/app.scss
+++ b/src/components/styles/app.scss
@@ -3,22 +3,23 @@
 
 .theorem-app {
 	@include media("mobile") {
-		height: calc(100vh - calc(#{$header-h-mobile} * 2));
+		min-height: calc(100vh - calc(#{$header-h-mobile} * 2));
 	}
 	@include media("tablet") {
-		height: calc(100vh - calc(#{$header-h-tablet} * 2));
+		min-height: calc(100vh - calc(#{$header-h-tablet} * 2));
 	}
 	@include media("desktop") {
-		height: calc(100vh - calc(#{$header-h-desktop} * 2));
+		min-height: calc(100vh - calc(#{$header-h-desktop} * 2));
 	}
 	@include media("large") {
-		height: calc(100vh - calc(#{$header-h-large} * 2));
+		min-height: calc(100vh - calc(#{$header-h-large} * 2));
 	}
 
 	& > .container {
 		height: 100%;
 		.body {
-			padding-top: 86px;
+			padding-top: 64px;
+			padding-bottom: 64px;
 			@include media("desktop", "large") {
 				padding-top: 96px;
 				@include dpr_media(1.25) {
